# buffa

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FIX_PLAN_ONEOF_CONFLICTS.md  LICENSE  README.md  Taskfile.yml
.claude/agents/: rust-code-reviewer.md
.github/workflows/: ci.yml  cla.yaml  release.yml  tools-image.yml
benchmarks/: .gitignore  Dockerfile.bench-buffa  Dockerfile.bench-go  Dockerfile.bench-google  Dockerfile.bench-prost  Dockerfile.bench-prost-bytes
benchmarks/buffa/: Cargo.toml  build.rs
benchmarks/buffa/benches/: protobuf.rs
benchmarks/buffa/src/: lib.rs
benchmarks/charts/: generate.py  tables.md
benchmarks/datasets/: analytics_event.pb  api_response.pb  log_record.pb  media_frame.pb
benchmarks/gen-datasets/: Cargo.toml  build.rs
benchmarks/gen-datasets/src/: main.rs
benchmarks/go/: bench_test.go  go.mod
benchmarks/google/: Cargo.toml  build.rs
benchmarks/google/benches/: protobuf.rs
benchmarks/google/src/: lib.rs
benchmarks/prost/: Cargo.toml  build.rs
benchmarks/prost-bytes/: Cargo.toml  build.rs
benchmarks/prost-bytes/benches/: protobuf.rs
benchmarks/prost-bytes/src/: lib.rs
benchmarks/prost/benches/: protobuf.rs
benchmarks/prost/src/: lib.rs
benchmarks/proto/: bench_messages.proto  benchmarks.proto
buffa/: Cargo.toml  README.md
buffa-build/: Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/: Cargo.toml
buffa-codegen/src/: comments.rs  context.rs  defaults.rs  enumeration.rs  extension.rs  features.rs  idents.rs  impl_message.rs  impl_text.rs  imports.rs  lib.rs  message.rs  oneof.rs  view.rs
buffa-codegen/src/tests/: custom_attributes.rs  generation.rs  json_codegen.rs  mod.rs  naming.rs  proto2.rs  view_codegen.rs
buffa-codegen/tests/: codegen_integration.rs
buffa-descriptor/src/: desc.rs  lib.rs
buffa-test/: Cargo.toml  build.rs
buffa-test/protos/: basic.proto  cross_package.proto  cross_syntax.proto  custom_options.proto  edge_cases.proto  editions_2024.proto  editions_enum_json.proto  ext_json.proto  group_ext.proto  json_types.proto  keywords.proto  messageset.proto  name_collisions.proto  nested_deep.proto  proto2_defaults.proto  proto2_json.proto  proto3_semantics.proto  utf8_validation.proto  wkt_usage.proto
buffa-test/src/: lib.rs
buffa-test/src/tests/: any_type_url.rs  basic.rs  bytes_type.rs  closed_enum.rs  collision.rs  cross_ref.rs  edge_cases.rs  editions_2024.rs  editions_enum_json.rs  extensions.rs  extensions_json.rs  json.rs  keyword.rs  message_set.rs  mod.rs  nesting.rs  proto2.rs  proto3_semantics.rs  textproto.rs  utf8_validation.rs  view.rs  wkt.rs
buffa-types/: Cargo.toml
buffa-types/benches/: any_clone.rs
buffa-types/protos/google/protobuf/: empty.proto
buffa-types/src/: any_ext.rs  duration_ext.rs  empty_ext.rs  field_mask_ext.rs  lib.rs  timestamp_ext.rs  value_ext.rs  wrapper_ext.rs
buffa-types/tests/: wkt_roundtrip.rs
buffa/src/: any_registry.rs  cached_size.rs  editions.rs  encoding.rs  enumeration.rs  error.rs  extension.rs  extension_registry.rs  json.rs  json_helpers.rs  json_registry.rs  lib.rs  message.rs  message_field.rs  message_set.rs  oneof.rs  size_cache.rs  type_registry.rs  types.rs  unknown_fields.rs  view.rs
buffa/src/json_helpers/: tests.rs
buffa/src/text/: decoder.rs  encoder.rs  error.rs  mod.rs  string.rs  token.rs
compat/: Dockerfile  run-compat.sh
conformance/: Cargo.toml  Dockerfile  Dockerfile.tools  build.rs  edition_defaults.binpb  known_failures.txt  known_failures_nostd.txt  known_failures_text.txt  known_failures_view.txt  run-conformance.sh
conformance/src/: envelope.rs  main.rs
docs/: guide.md  migration-from-prost.md  migration-from-protobuf.md
docs/investigations/e0477-owned-view-send/: Cargo.toml  README.md
docs/investigations/e0477-owned-view-send/src/: cross.rs  lib.rs
examples/addressbook/: Cargo.toml  build.rs
examples/addressbook/proto/: addressbook.proto
examples/addressbook/src/: main.rs
examples/envelope/: Cargo.toml  build.rs
examples/envelope/proto/: envelope.proto
examples/envelope/src/: main.rs
examples/logging/: Cargo.toml  buf.gen.yaml
examples/logging/proto/context/v1/: context.proto
examples/logging/proto/log/v1/: log.proto
examples/logging/src/: main.rs
fuzz/: Cargo.toml  build.rs
fuzz/fuzzers/: decode_proto2.rs  decode_proto3.rs  decode_wkt.rs  encode_proto3.rs  json_roundtrip.rs  wkt_json_strings.rs
fuzz/src/: lib.rs
protoc-gen-buffa/: Cargo.toml  Dockerfile  buf.plugin.yaml
protoc-gen-buffa/src/: main.rs
scripts/: check-keywords.py  fetch-protos.sh  fuzz-all.sh  gen-bootstrap-types.sh
signatures/: cla.json
stress/googleapis/: Cargo.stress.toml  Dockerfile  buf.gen.yaml  exclude_from_compile.txt  gen_lib_rs.py  report.sh
