[package]
name = "buffa-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Exclude from workspace — requires nightly and libfuzzer.
[workspace]

[features]
default = ["arbitrary"]
arbitrary = []

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
buffa = { path = "../buffa", features = ["json", "arbitrary"] }
buffa-types = { path = "../buffa-types", features = ["json", "arbitrary"] }
buffa-build = { path = "../buffa-build" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "buffa_fuzz"
path = "src/lib.rs"
test = false
doc = false

[build-dependencies]
buffa-build = { path = "../buffa-build" }

[[bin]]
name = "decode_proto3"
path = "fuzzers/decode_proto3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_proto2"
path = "fuzzers/decode_proto2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_roundtrip"
path = "fuzzers/json_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_wkt"
path = "fuzzers/decode_wkt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode_proto3"
path = "fuzzers/encode_proto3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wkt_json_strings"
path = "fuzzers/wkt_json_strings.rs"
test = false
doc = false
bench = false
