[package]
name = "bench-buffa"
version = "0.1.0"
edition = "2021"
publish = false

# Disable lib benchmarks so `cargo bench -- --save-baseline X` only hits
# the criterion binary (not the libtest harness which rejects criterion args).
[lib]
bench = false

[dependencies]
buffa = { path = "../../buffa", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
buffa-build = { path = "../../buffa-build" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "protobuf"
harness = false
