[package]
name = "bench-prost"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
bench = false

[dependencies]
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "protobuf"
harness = false
